# Jogo-da-Forca

./: Buttun.cpp  Buttun.h  CMakeLists.txt  README.md  arq.txt  dificil.txt  main.cpp  textbox.cpp  textbox.h  textos.cpp  textos.h
